--- a/html/2.1.5 film.html
+++ b/html/2.1.5 film.html
@@ -7,7 +7,7 @@
 		}
 		
 		</script>
-		<title>FF - Skver</title>
+		<title>FF - Oblik vode</title>
 		<link rel="icon" href="../images/circle-logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -92,17 +92,17 @@
 					<ul class="breadcrumb">
 						<li class="breadcrumb-item ">Program</li>
 						<li class="breadcrumb-item"><a href="2.1 filmovi.html" class="breadcrumb-link">Filmovi</a></li>
-						<li class="breadcrumb-item active">Skver</li>
+						<li class="breadcrumb-item active">Oblik vode</li>
 					</ul>
 				</div>
 			</div>
 			<div class="row">
 					<div class="col-6">
-						<img src="../images/filmovi/film1.jpg" width="100%">
+						<img src="../images/filmovi/film5.jpg" width="100%">
 					</div>
 					<div class="col-6">
 						<div class="container">
-						  <h1>Skver</h1>
+						  <h1>Oblik vode</h1>
 						  <form name="forma_mojifilmovi">
 							  <div class="btn-group-toggle" data-toggle="buttons">
 								  <label class="btn btn-warning btn-sm active">
@@ -116,15 +116,15 @@
 						    <tbody>
 						      <tr>
 						        <td><strong>Režija</strong></td>
-						        <td>Ruben Östlund</td>
+						        <td>Guillermo del Toro</td>
 						      </tr>
 						      <tr>
 						        <td><strong>Glavne uloge</strong></td>
-						        <td>Claes Bang, Elisabeth Moss, Dominic West, Terry Notary</td>
+						        <td>Sally Hawkins, Doug Jones, Michael Shannon, Richard Jenkins, Octavia Spencer, Michael Stuhlbarg</td>
 						      </tr>
 						      <tr>
 						        <td><strong>Trajanje</strong></td>
-						        <td>142'</td>
+						        <td>123'</td>
 						      </tr>
 						    </tbody>
 						  </table>
@@ -132,14 +132,11 @@
 						  <h4>Kratak opis:</h4>
 						  <span class="badge badge-danger">Spoiler alert</span>
 							<i class="film-description">
-							Kristijan je uvaženi kustos u muzeju savremene umetnosti, 
-							razveden, ali posvećen otac, koji vozi električni auto i 
-							podržava dobre stvari. Njegova naredna izložba je „Skver", 
-							instalacija koja poziva prolaznike na altruizam, podsećajući 
-							ih na njihovu ulogu odgovornih ljudskih bića. 
-							U međuvremenu, muzejska PR agencija pravi neočekivanu kampanju za 
-							instalaciju. Odgovor je prenagalašen i postavlja Kristijana, 
-							ali i muzej, u egzistencijalnu krizu.
+							Oblik vode je bajkovita priča smeštena u vreme Hladnog rata u SAD, 
+							oko 1962. godine. U tajnoj, visoko obezbeđenoj vladinoj laboratoriji, 
+							radi Elajza, koja vodi samotan i sputan život. 
+							Njen život se menja iz korena kada sa svojom koleginicom Zeldom 
+							otkrije tajni eksperiment unutar laboratorije.
 							</i>
 						</div>
 					</div>
@@ -162,15 +159,22 @@
 								<tr>
 									<td>0</td>
 									<td>1. jun</td>
-									<td>20:00</td>
+									<td>21:30</td>
 									<td>Sava Centar</td>
-									<td>400 rsd</td>
+									<td>450 rsd</td>
 								</tr>
 								<tr>
 									<td>1</td>
 									<td>2. jun</td>
-									<td>22:00</td>
+									<td>21:30</td>
 									<td>Dom Omladine</td>
+									<td>450 rsd</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>2. jun</td>
+									<td>20:00</td>
+									<td>Sava Centar</td>
 									<td>350 rsd</td>
 								</tr>
 							</table>
@@ -224,10 +228,10 @@
 					<div class="col-12">
 						<center>
 						 	<div>
-							  <a class="example-image-link" href="../images/galerija1/slika1.jpg" data-lightbox="example-set" data-title="Slika 1"><img class="example-image" src="../images/galerija1/slika1.jpg" alt="" width="20%"></a>
-							  <a class="example-image-link" href="../images/galerija1/slika2.jpg" data-lightbox="example-set" data-title="Slika 2"><img class="example-image" src="../images/galerija1/slika2.jpg" alt="" width="20%"></a>
-							  <a class="example-image-link" href="../images/galerija1/slika3.jpg" data-lightbox="example-set" data-title="Slika 3"><img class="example-image" src="../images/galerija1/slika3.jpg" alt="" width="20%"></a>
-							  <a class="example-image-link" href="../images/galerija1/slika4.jpg" data-lightbox="example-set" data-title="Slika 4"><img class="example-image" src="../images/galerija1/slika4.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija5/slika1.jpg" data-lightbox="example-set" data-title="Slika 1"><img class="example-image" src="../images/galerija5/slika1.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija5/slika2.jpg" data-lightbox="example-set" data-title="Slika 3"><img class="example-image" src="../images/galerija5/slika2.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija5/slika3.jpg" data-lightbox="example-set" data-title="Slika 2"><img class="example-image" src="../images/galerija5/slika3.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija5/slika4.jpg" data-lightbox="example-set" data-title="Slika 3"><img class="example-image" src="../images/galerija5/slika4.jpg" alt="" width="20%"></a>
 							</div>
 						</center>
 					</div>	
