--- a/html/2.1.6 film.html
+++ b/html/2.1.6 film.html
@@ -7,7 +7,7 @@
 		}
 		
 		</script>
-		<title>FF - Skver</title>
+		<title>FF - Fantomska nit</title>
 		<link rel="icon" href="../images/circle-logo.png">
 		<link href="https://fonts.googleapis.com/css?family=Contrail+One|Damion|Dancing+Script|Fredoka+One|Fugaz+One|Kaushan+Script|Monoton|Pacifico|Righteous|Titan+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -92,17 +92,17 @@
 					<ul class="breadcrumb">
 						<li class="breadcrumb-item ">Program</li>
 						<li class="breadcrumb-item"><a href="2.1 filmovi.html" class="breadcrumb-link">Filmovi</a></li>
-						<li class="breadcrumb-item active">Skver</li>
+						<li class="breadcrumb-item active">Fantomska nit</li>
 					</ul>
 				</div>
 			</div>
 			<div class="row">
 					<div class="col-6">
-						<img src="../images/filmovi/film1.jpg" width="100%">
+						<img src="../images/filmovi/film6.jpg" width="100%">
 					</div>
 					<div class="col-6">
 						<div class="container">
-						  <h1>Skver</h1>
+						  <h1>Fantomska nit</h1>
 						  <form name="forma_mojifilmovi">
 							  <div class="btn-group-toggle" data-toggle="buttons">
 								  <label class="btn btn-warning btn-sm active">
@@ -116,15 +116,15 @@
 						    <tbody>
 						      <tr>
 						        <td><strong>Režija</strong></td>
-						        <td>Ruben Östlund</td>
+						        <td>Paul Thomas Anderson</td>
 						      </tr>
 						      <tr>
 						        <td><strong>Glavne uloge</strong></td>
-						        <td>Claes Bang, Elisabeth Moss, Dominic West, Terry Notary</td>
+						        <td>Daniel Day-Lewis, Vicky Krieps, Lesley Manville</td>
 						      </tr>
 						      <tr>
 						        <td><strong>Trajanje</strong></td>
-						        <td>142'</td>
+						        <td>115'</td>
 						      </tr>
 						    </tbody>
 						  </table>
@@ -132,14 +132,17 @@
 						  <h4>Kratak opis:</h4>
 						  <span class="badge badge-danger">Spoiler alert</span>
 							<i class="film-description">
-							Kristijan je uvaženi kustos u muzeju savremene umetnosti, 
-							razveden, ali posvećen otac, koji vozi električni auto i 
-							podržava dobre stvari. Njegova naredna izložba je „Skver", 
-							instalacija koja poziva prolaznike na altruizam, podsećajući 
-							ih na njihovu ulogu odgovornih ljudskih bića. 
-							U međuvremenu, muzejska PR agencija pravi neočekivanu kampanju za 
-							instalaciju. Odgovor je prenagalašen i postavlja Kristijana, 
-							ali i muzej, u egzistencijalnu krizu.
+							U glamuroznom posleratnom Londonu pedesetih godina prošlog 
+							veka čuveni modni kreator Rejnolds Vudkok i njegova sestra Siril 
+							nalaze se u centru britanske mode. 
+							Oni oblače princeze, filmske zvezde, mlade bogatašice, 
+							poznate ličnosti, debitantkinje u društvu i dame sa istančanim 
+							ukusom vezanim za njihov brend. Žene ulaze i izlaze iz Vudkokovog 
+							života, pružajući zakletom neženji inspiraciju i društvo, 
+							sve dok se on ne susretne sa Almom, mladom i odlučnom ženom, 
+							koja ubrzo postaje opsesija njegovog života, kao njegova muza 
+							i ljubavnica. Ranije strogo kontrolisan i isplaniran, njegov 
+							uniformisani život postaje poljuljan od ljubavi.
 							</i>
 						</div>
 					</div>
@@ -162,16 +165,16 @@
 								<tr>
 									<td>0</td>
 									<td>1. jun</td>
-									<td>20:00</td>
+									<td>15:00</td>
 									<td>Sava Centar</td>
-									<td>400 rsd</td>
+									<td>300 rsd</td>
 								</tr>
 								<tr>
 									<td>1</td>
 									<td>2. jun</td>
-									<td>22:00</td>
+									<td>17:30</td>
 									<td>Dom Omladine</td>
-									<td>350 rsd</td>
+									<td>250 rsd</td>
 								</tr>
 							</table>
 						</p>
@@ -224,10 +227,10 @@
 					<div class="col-12">
 						<center>
 						 	<div>
-							  <a class="example-image-link" href="../images/galerija1/slika1.jpg" data-lightbox="example-set" data-title="Slika 1"><img class="example-image" src="../images/galerija1/slika1.jpg" alt="" width="20%"></a>
-							  <a class="example-image-link" href="../images/galerija1/slika2.jpg" data-lightbox="example-set" data-title="Slika 2"><img class="example-image" src="../images/galerija1/slika2.jpg" alt="" width="20%"></a>
-							  <a class="example-image-link" href="../images/galerija1/slika3.jpg" data-lightbox="example-set" data-title="Slika 3"><img class="example-image" src="../images/galerija1/slika3.jpg" alt="" width="20%"></a>
-							  <a class="example-image-link" href="../images/galerija1/slika4.jpg" data-lightbox="example-set" data-title="Slika 4"><img class="example-image" src="../images/galerija1/slika4.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija6/slika1.jpg" data-lightbox="example-set" data-title="Slika 1"><img class="example-image" src="../images/galerija6/slika1.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija6/slika2.jpg" data-lightbox="example-set" data-title="Slika 3"><img class="example-image" src="../images/galerija6/slika2.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija6/slika3.jpg" data-lightbox="example-set" data-title="Slika 2"><img class="example-image" src="../images/galerija6/slika3.jpg" alt="" width="20%"></a>
+							  <a class="example-image-link" href="../images/galerija6/slika4.jpg" data-lightbox="example-set" data-title="Slika 3"><img class="example-image" src="../images/galerija6/slika4.jpg" alt="" width="20%"></a>
 							</div>
 						</center>
 					</div>	
